feat: module 7, init